[gd_scene load_steps=26 format=3 uid="uid://dowfwfcy1hbhc"]

[ext_resource type="Script" path="res://script/player_interface.gd" id="1_65u7r"]
[ext_resource type="Texture2D" uid="uid://bgayydxps5t77" path="res://asset/splash_backgrounds/main_menu_background_2.jpg" id="2_1xymm"]
[ext_resource type="Texture2D" uid="uid://dd633w5mpq1ml" path="res://asset/progress_bars/health_bar_empty.png" id="6_lybeq"]
[ext_resource type="Texture2D" uid="uid://dqkh7frb4hnb7" path="res://asset/hud_icons/health_icon.png" id="6_spy8f"]
[ext_resource type="Texture2D" uid="uid://b242elr63dyjs" path="res://asset/progress_bars/health_bar_full.png" id="7_5vlye"]
[ext_resource type="Texture2D" uid="uid://cdta3x2tj3qj2" path="res://asset/progress_bars/overshield_bar_empty.png" id="8_smqut"]
[ext_resource type="Texture2D" uid="uid://mf1uw5c1thag" path="res://asset/progress_bars/overshield_bar_full.png" id="9_d3ltp"]
[ext_resource type="Texture2D" uid="uid://du23brfkmc47b" path="res://asset/hud_icons/overshield_icon.png" id="9_gsp15"]
[ext_resource type="Texture2D" uid="uid://c7sv0114inoeb" path="res://asset/progress_bars/magic_bar_empty.png" id="10_ad7hu"]
[ext_resource type="Texture2D" uid="uid://csdfcqnvdiinp" path="res://asset/progress_bars/magic_bar_full.png" id="11_7ov1n"]
[ext_resource type="Texture2D" uid="uid://tgpky0fxo1xw" path="res://asset/progress_bars/stamina_bar_empty.png" id="12_vcab1"]
[ext_resource type="Texture2D" uid="uid://bhh40vrv80dfg" path="res://asset/hud_icons/magic_icon.png" id="12_xcy8h"]
[ext_resource type="Texture2D" uid="uid://8f7cn6dd4cof" path="res://asset/progress_bars/stamina_bar_full.png" id="13_sxpfb"]
[ext_resource type="Texture2D" uid="uid://c574ldfbl62pf" path="res://asset/hud_icons/stamina_alternate_icon.png" id="15_k0pcb"]
[ext_resource type="Texture2D" uid="uid://c6qumy4ffbhg7" path="res://asset/hud_icons/emblem_hero_alternate_icon.png" id="17_2vjxx"]
[ext_resource type="Texture2D" uid="uid://bbrcswjc4sotc" path="res://asset/hud_icons/emblem_icon.png" id="17_ca3in"]
[ext_resource type="Texture2D" uid="uid://fdt0lhcsfd40" path="res://asset/panels/preview_dual_panel.png" id="20_s7eyj"]
[ext_resource type="Texture2D" uid="uid://co0q45fjjau07" path="res://asset/progress_bars/level_bar_empty.png" id="21_2ild3"]
[ext_resource type="Texture2D" uid="uid://dm3c2cs16rmpu" path="res://asset/hud_icons/experience_small_icon.png" id="21_066vv"]
[ext_resource type="Texture2D" uid="uid://b20umuda1sx50" path="res://asset/hud_icons/stamina_icon.png" id="21_hb3yy"]
[ext_resource type="Texture2D" uid="uid://bhdfmrmo6atst" path="res://asset/progress_bars/level_bar_full.png" id="22_3x4rg"]
[ext_resource type="Texture2D" uid="uid://b042pygd31oh1" path="res://asset/hud_icons/technique_background.png" id="23_3puvr"]
[ext_resource type="Texture2D" uid="uid://2e6ddmenpq30" path="res://asset/ranged weapon/light machine gun.png" id="23_fgvnr"]
[ext_resource type="Texture2D" uid="uid://bls5r0gybslf0" path="res://asset/melee weapon/long sword.png" id="23_rjvss"]
[ext_resource type="PackedScene" uid="uid://hlfb4t55bws6" path="res://object/menu_interface.tscn" id="25_m4nwu"]

[node name="PlayerInterface" type="CanvasLayer"]
script = ExtResource("1_65u7r")

[node name="MainMenuBackground" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_1xymm")

[node name="GameInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 1

[node name="Health" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="HealthIcon" type="Sprite2D" parent="GameInterface/Health"]
position = Vector2(251, 1009)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_spy8f")

[node name="HealthBar" type="TextureProgressBar" parent="GameInterface/Health"]
layout_mode = 0
offset_left = 81.8999
offset_top = 1000.8
offset_right = 404.9
offset_bottom = 1034.8
scale = Vector2(0.5, 0.5)
rounded = true
texture_under = ExtResource("6_lybeq")
texture_progress = ExtResource("7_5vlye")
texture_progress_offset = Vector2(5, 5)

[node name="HealthText" type="Label" parent="GameInterface/Health"]
layout_mode = 0
offset_left = 84.0
offset_top = 1002.0
offset_right = 400.0
offset_bottom = 1032.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Overshield" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="OvershieldIcon" type="Sprite2D" parent="GameInterface/Overshield"]
position = Vector2(251, 1025)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_gsp15")

[node name="OvershieldBar" type="TextureProgressBar" parent="GameInterface/Overshield"]
layout_mode = 0
offset_left = 81.8999
offset_top = 1016.8
offset_right = 404.9
offset_bottom = 1050.8
scale = Vector2(0.5, 0.5)
rounded = true
texture_under = ExtResource("8_smqut")
texture_progress = ExtResource("9_d3ltp")
texture_progress_offset = Vector2(5, 5)

[node name="OvershieldText" type="Label" parent="GameInterface/Overshield"]
layout_mode = 0
offset_left = 84.0
offset_top = 1018.0
offset_right = 400.0
offset_bottom = 1048.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Magic" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="MagicIcon" type="Sprite2D" parent="GameInterface/Magic"]
position = Vector2(251, 1041)
scale = Vector2(0.25, 0.25)
texture = ExtResource("12_xcy8h")

[node name="MagicBar" type="TextureProgressBar" parent="GameInterface/Magic"]
layout_mode = 0
offset_left = 81.8999
offset_top = 1032.8
offset_right = 404.9
offset_bottom = 1066.8
scale = Vector2(0.5, 0.5)
rounded = true
texture_under = ExtResource("10_ad7hu")
texture_progress = ExtResource("11_7ov1n")
texture_progress_offset = Vector2(5, 5)

[node name="MagicText" type="Label" parent="GameInterface/Magic"]
layout_mode = 0
offset_left = 84.0
offset_top = 1034.0
offset_right = 400.0
offset_bottom = 1064.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stamina" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="StaminaIcon" type="Sprite2D" parent="GameInterface/Stamina"]
position = Vector2(250.875, 1057)
scale = Vector2(0.146, 0.146)
texture = ExtResource("15_k0pcb")

[node name="StaminaBar" type="TextureProgressBar" parent="GameInterface/Stamina"]
layout_mode = 0
offset_left = 81.8999
offset_top = 1048.8
offset_right = 404.9
offset_bottom = 1082.8
scale = Vector2(0.5, 0.5)
rounded = true
texture_under = ExtResource("12_vcab1")
texture_progress = ExtResource("13_sxpfb")
texture_progress_offset = Vector2(5, 5)

[node name="StaminaText" type="Label" parent="GameInterface/Stamina"]
layout_mode = 0
offset_left = 84.0
offset_top = 1050.0
offset_right = 400.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Experience" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="ExperienceBar" type="TextureProgressBar" parent="GameInterface/Experience"]
layout_mode = 0
offset_left = 17.0
offset_top = 993.0
offset_right = 799.0
offset_bottom = 999.0
scale = Vector2(0.305, 1)
rounded = true
texture_under = ExtResource("21_2ild3")
texture_progress = ExtResource("22_3x4rg")

[node name="SpecialistBar" type="TextureProgressBar" parent="GameInterface/Experience"]
layout_mode = 0
offset_left = 16.0
offset_top = 1000.0
offset_right = 372.0
offset_bottom = 1358.0
scale = Vector2(0.18, 0.18)
rounded = true
fill_mode = 4
texture_under = ExtResource("17_ca3in")
texture_progress = ExtResource("17_ca3in")
tint_under = Color(1, 1, 1, 0.568627)

[node name="Species" type="Sprite2D" parent="GameInterface/Experience/SpecialistBar"]
position = Vector2(177.778, 177.778)
scale = Vector2(1.56034, 1.56034)

[node name="Specialist" type="Sprite2D" parent="GameInterface/Experience/SpecialistBar"]
position = Vector2(177.778, 177.778)
scale = Vector2(1.56034, 1.56034)

[node name="PlayerBar" type="Sprite2D" parent="GameInterface/Experience"]
position = Vector2(136, 984)
scale = Vector2(0.307298, 0.333334)
texture = ExtResource("20_s7eyj")

[node name="Rank" type="Label" parent="GameInterface/Experience/PlayerBar"]
offset_left = -391.0
offset_top = -24.0
offset_right = 52.0
offset_bottom = 24.0
text = "Specialist rank"
vertical_alignment = 1
uppercase = true

[node name="Level" type="Label" parent="GameInterface/Experience/PlayerBar"]
offset_left = 104.0
offset_top = -24.0
offset_right = 338.0
offset_bottom = 24.0
text = "Level"
uppercase = true

[node name="RankPoint" type="Sprite2D" parent="GameInterface/Experience/PlayerBar"]
position = Vector2(78, 0)
scale = Vector2(1.07597, 1.01613)
texture = ExtResource("21_hb3yy")

[node name="LevelPoint" type="Sprite2D" parent="GameInterface/Experience/PlayerBar"]
position = Vector2(356, 0)
scale = Vector2(2, 2)
texture = ExtResource("21_066vv")

[node name="RangedWeapon" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="ActiveMode" type="ColorRect" parent="GameInterface/RangedWeapon"]
layout_mode = 0
offset_left = 1663.0
offset_top = 1023.0
offset_right = 1905.0
offset_bottom = 1065.0

[node name="AmmoRect" type="ColorRect" parent="GameInterface/RangedWeapon/ActiveMode"]
layout_mode = 0
offset_left = 160.0
offset_top = 1.0
offset_right = 162.0
offset_bottom = 41.0
color = Color(0, 1, 0, 1)

[node name="Background" type="TextureRect" parent="GameInterface/RangedWeapon"]
layout_mode = 0
offset_left = 1664.0
offset_top = 1024.0
offset_right = 1904.0
offset_bottom = 1064.0
texture = ExtResource("20_s7eyj")
expand_mode = 1

[node name="Weapon" type="TextureRect" parent="GameInterface/RangedWeapon"]
layout_mode = 0
offset_left = 1664.0
offset_top = 1024.0
offset_right = 1824.0
offset_bottom = 1064.0
texture = ExtResource("23_fgvnr")
expand_mode = 1
stretch_mode = 5

[node name="Ammo" type="Label" parent="GameInterface/RangedWeapon"]
layout_mode = 0
offset_left = 1824.0
offset_top = 1024.0
offset_right = 1904.0
offset_bottom = 1064.0
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameInterface/RangedWeapon"]
layout_mode = 0
offset_left = 1640.0
offset_top = 1024.0
offset_right = 1664.0
offset_bottom = 1064.0
theme_override_font_sizes/font_size = 20
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeleeWeapon" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="ActiveMode" type="ColorRect" parent="GameInterface/MeleeWeapon"]
visible = false
layout_mode = 0
offset_left = 1663.0
offset_top = 975.0
offset_right = 1905.0
offset_bottom = 1017.0

[node name="ChargeRect" type="ColorRect" parent="GameInterface/MeleeWeapon/ActiveMode"]
layout_mode = 0
offset_left = 160.0
offset_top = 1.0
offset_right = 162.0
offset_bottom = 41.0
color = Color(0, 1, 0, 1)

[node name="Background" type="TextureRect" parent="GameInterface/MeleeWeapon"]
layout_mode = 0
offset_left = 1664.0
offset_top = 976.0
offset_right = 1904.0
offset_bottom = 1016.0
texture = ExtResource("20_s7eyj")
expand_mode = 1

[node name="Weapon" type="TextureRect" parent="GameInterface/MeleeWeapon"]
layout_mode = 0
offset_left = 1664.0
offset_top = 976.0
offset_right = 2498.0
offset_bottom = 1148.0
scale = Vector2(0.191846, 0.232558)
texture = ExtResource("23_rjvss")
expand_mode = 1
stretch_mode = 5

[node name="Charge" type="Label" parent="GameInterface/MeleeWeapon"]
layout_mode = 0
offset_left = 1824.0
offset_top = 976.0
offset_right = 1904.0
offset_bottom = 1016.0
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameInterface/MeleeWeapon"]
layout_mode = 0
offset_left = 1640.0
offset_top = 976.0
offset_right = 1664.0
offset_bottom = 1016.0
theme_override_font_sizes/font_size = 20
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectionSlots" type="Control" parent="GameInterface"]
anchors_preset = 0

[node name="Slot1Background" type="Sprite2D" parent="GameInterface/SelectionSlots"]
position = Vector2(840, 1025)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_3puvr")

[node name="Slot2Background" type="Sprite2D" parent="GameInterface/SelectionSlots"]
position = Vector2(920, 1025)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_3puvr")

[node name="Slot3Background" type="Sprite2D" parent="GameInterface/SelectionSlots"]
position = Vector2(1000, 1025)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_3puvr")

[node name="Slot4Background" type="Sprite2D" parent="GameInterface/SelectionSlots"]
position = Vector2(1080, 1024)
scale = Vector2(0.5, 0.5)
texture = ExtResource("23_3puvr")

[node name="Slot1" type="TextureProgressBar" parent="GameInterface/SelectionSlots"]
layout_mode = 0
offset_left = 808.0
offset_top = 993.0
offset_right = 936.0
offset_bottom = 1121.0
scale = Vector2(0.5, 0.5)
rounded = true
fill_mode = 4
tint_under = Color(1, 1, 1, 0.294118)

[node name="Overlay" type="Sprite2D" parent="GameInterface/SelectionSlots/Slot1"]
position = Vector2(64, 64)
scale = Vector2(0.45, 0.45)
texture = ExtResource("17_2vjxx")

[node name="Label" type="Label" parent="GameInterface/SelectionSlots/Slot1"]
layout_mode = 0
offset_left = 44.0
offset_top = 132.0
offset_right = 84.0
offset_bottom = 176.0
text = "Z"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="TextureProgressBar" parent="GameInterface/SelectionSlots"]
layout_mode = 0
offset_left = 888.0
offset_top = 993.0
offset_right = 1016.0
offset_bottom = 1121.0
scale = Vector2(0.5, 0.5)
rounded = true
fill_mode = 4
tint_under = Color(1, 1, 1, 0.294118)

[node name="Overlay" type="Sprite2D" parent="GameInterface/SelectionSlots/Slot2"]
position = Vector2(64, 64)
scale = Vector2(0.45, 0.45)
texture = ExtResource("17_2vjxx")

[node name="Label" type="Label" parent="GameInterface/SelectionSlots/Slot2"]
layout_mode = 0
offset_left = 44.0
offset_top = 132.0
offset_right = 84.0
offset_bottom = 176.0
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="TextureProgressBar" parent="GameInterface/SelectionSlots"]
layout_mode = 0
offset_left = 968.0
offset_top = 993.0
offset_right = 1096.0
offset_bottom = 1121.0
scale = Vector2(0.5, 0.5)
rounded = true
fill_mode = 4
tint_under = Color(1, 1, 1, 0.294118)

[node name="Overlay" type="Sprite2D" parent="GameInterface/SelectionSlots/Slot3"]
position = Vector2(64, 64)
scale = Vector2(0.45, 0.45)
texture = ExtResource("17_2vjxx")

[node name="Label" type="Label" parent="GameInterface/SelectionSlots/Slot3"]
layout_mode = 0
offset_left = 44.0
offset_top = 132.0
offset_right = 84.0
offset_bottom = 176.0
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot4" type="TextureProgressBar" parent="GameInterface/SelectionSlots"]
layout_mode = 0
offset_left = 1048.0
offset_top = 993.0
offset_right = 1176.0
offset_bottom = 1121.0
scale = Vector2(0.5, 0.5)
rounded = true
fill_mode = 4
tint_under = Color(1, 1, 1, 0.294118)

[node name="Overlay" type="Sprite2D" parent="GameInterface/SelectionSlots/Slot4"]
position = Vector2(64, 64)
scale = Vector2(0.45, 0.45)
texture = ExtResource("17_2vjxx")

[node name="Label" type="Label" parent="GameInterface/SelectionSlots/Slot4"]
layout_mode = 0
offset_left = 44.0
offset_top = 132.0
offset_right = 84.0
offset_bottom = 176.0
text = "V"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectionLabel" type="Label" parent="GameInterface/SelectionSlots"]
layout_mode = 0
offset_left = 808.0
offset_top = 968.0
offset_right = 1112.0
offset_bottom = 990.0
theme_override_font_sizes/font_size = 18
text = "Technique"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MenuInterface" parent="." instance=ExtResource("25_m4nwu")]
